switch to wails

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML2EXE - Convert Web Apps to Windows Executables</title>
+    <title>HTML2EXE - Convert Web Apps to Windows Executables with Wails</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>">
 </head>
@@ -15,7 +15,7 @@
                     <span class="logo-icon">⚡</span>
                     <span class="logo-text">HTML2EXE</span>
                 </div>
-                <p class="subtitle">Convert web applications to Windows executables</p>
+                <p class="subtitle">Convert web applications to Windows executables using Wails</p>
             </div>
         </header>
 
@@ -234,10 +234,10 @@
         <footer class="footer">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="https://electronjs.org" target="_blank">Electron</a>
+                    <a href="https://wails.io" target="_blank">Wails</a>
                     <a href="/api/health" target="_blank">Status</a>
                 </div>
-                <p class="footer-text">Windows Desktop Converter</p>
+                <p class="footer-text">Lightweight Desktop Converter powered by Wails</p>
             </div>
         </footer>
     </div>
