--- a/public/index.html
+++ b/public/index.html
@@ -155,13 +155,13 @@
                     </div>
                     <div class="step" id="step2">
                         <div class="step-number">2</div>
-                        <div class="step-label">Setup</div>
+                        <div class="step-label">Building</div>
                     </div>
                     <div class="step" id="step3">
                         <div class="step-number">3</div>
-                        <div class="step-label">Build</div>
+                        <div class="step-label">Complete</div>
                     </div>
-                    <div class="step" id="step4">
+                    <div class="step" id="step4" style="display: none;">
                         <div class="step-number">4</div>
                         <div class="step-label">Complete</div>
                     </div>
