--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>">
 </head>
 <body>
-    <div class="container">
+    <div class="container" x-data="html2exeApp()">
         <header class="header">
             <div class="header-content">
                 <div class="logo">
@@ -21,8 +21,14 @@
 
         <main class="main">
             <!-- Upload Section -->
-            <section class="upload-section" id="uploadSection">
-                <div class="upload-area" id="uploadArea">
+            <section class="upload-section" x-show="currentSection === 'upload'">
+                <div class="upload-area" 
+                     :class="{ 'dragover': isDragOver }"
+                     @dragenter.prevent="isDragOver = true"
+                     @dragover.prevent
+                     @dragleave.prevent="isDragOver = false"
+                     @drop.prevent="handleDrop($event)"
+                     @click="$refs.fileInput.click()">
                     <div class="upload-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
@@ -31,8 +37,8 @@
                         </svg>
                     </div>
                     <h3>Upload ZIP File</h3>
-                    <p>Drag and drop or <button type="button" class="browse-btn" id="browseBtn">choose file</button></p>
-                    <input type="file" id="fileInput" accept=".zip" hidden>
+                    <p>Drag and drop or <button type="button" class="browse-btn" @click.stop="$refs.fileInput.click()">choose file</button></p>
+                    <input type="file" x-ref="fileInput" accept=".zip" @change="handleFileSelect($event)" hidden>
                     <div class="upload-requirements">
                         <div class="requirements-grid">
                             <div class="requirement">
@@ -62,7 +68,7 @@
             </section>
 
             <!-- Configuration Section -->
-            <section class="config-section" id="configSection" style="display: none;">
+            <section class="config-section" x-show="currentSection === 'config'">
                 <div class="section-header">
                     <h3>Configuration</h3>
                     <p>Customize your application settings</p>
@@ -70,51 +76,51 @@
                 <div class="config-form">
                     <div class="form-group">
                         <label for="appName">Application Name:</label>
-                        <input type="text" id="appName" placeholder="My App" maxlength="214">
+                        <input type="text" x-model="config.appName" placeholder="My App" maxlength="214">
                         <small class="field-help">The display name of your application. Special characters will be cleaned for compatibility.</small>
                     </div>
                     <div class="form-group">
                         <label for="appDescription">Description:</label>
-                        <input type="text" id="appDescription" placeholder="A desktop application" maxlength="100">
+                        <input type="text" x-model="config.description" placeholder="A desktop application" maxlength="100">
                         <small class="field-help">Brief description shown in file properties and Task Manager</small>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label for="appWidth">Window Width:</label>
-                            <input type="number" id="appWidth" value="1200" min="400" max="2000">
+                            <input type="number" x-model.number="config.width" min="400" max="2000">
                             <small class="field-help">Initial window width in pixels</small>
                         </div>
                         <div class="form-group">
                             <label for="appHeight">Window Height:</label>
-                            <input type="number" id="appHeight" value="800" min="300" max="1500">
+                            <input type="number" x-model.number="config.height" min="300" max="1500">
                             <small class="field-help">Initial window height in pixels</small>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="appVersion">Version:</label>
-                        <input type="text" id="appVersion" value="1.0.0" placeholder="1.0.0" maxlength="20">
+                        <input type="text" x-model="config.version" placeholder="1.0.0" maxlength="20">
                         <small class="field-help">App version number (e.g., 1.0.0, 2.1.3) - shown in file properties</small>
                     </div>
                     <div class="form-group">
                         <label for="appCompany">Company (Optional):</label>
-                        <input type="text" id="appCompany" placeholder="Your Company Name" maxlength="50">
+                        <input type="text" x-model="config.company" placeholder="Your Company Name" maxlength="50">
                         <small class="field-help">Company or organization name - appears as publisher</small>
                     </div>
                     
                     <!-- Icon Upload Section -->
                     <div class="form-group icon-upload-group">
-                        <label for="iconFile">Application Icon (Optional):</label>
-                        <div class="icon-upload-area" id="iconUploadArea">
-                            <div class="icon-preview" id="iconPreview" style="display: none;">
-                                <img id="iconPreviewImage" src="" alt="Icon preview">
-                                <button type="button" class="remove-icon-btn" id="removeIconBtn">
+                        <label>Application Icon (Optional):</label>
+                        <div class="icon-upload-area" @click="$refs.iconInput.click()">
+                            <div class="icon-preview" x-show="iconPreviewUrl">
+                                <img :src="iconPreviewUrl" alt="Icon preview">
+                                <button type="button" class="remove-icon-btn" @click.stop="removeIcon()">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <line x1="18" y1="6" x2="6" y2="18"/>
                                         <line x1="6" y1="6" x2="18" y2="18"/>
                                     </svg>
                                 </button>
                             </div>
-                            <div class="icon-upload-placeholder" id="iconUploadPlaceholder">
+                            <div class="icon-upload-placeholder" x-show="!iconPreviewUrl">
                                 <div class="icon-upload-icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
@@ -125,52 +131,46 @@
                                 <p>Upload icon</p>
                                 <small>PNG, ICO, JPG • Max 5MB</small>
                             </div>
-                            <input type="file" id="iconFile" accept=".png,.ico,.jpg,.jpeg" hidden>
+                            <input type="file" x-ref="iconInput" accept=".png,.ico,.jpg,.jpeg" @change="handleIconSelect($event)" hidden>
                         </div>
                         <small class="field-help">Custom icon for your executable</small>
                     </div>
                 </div>
                 <div class="action-buttons">
-                    <button type="button" class="btn btn-secondary" id="backBtn">Back</button>
-                    <button type="button" class="btn btn-primary" id="convertBtn">Convert to EXE</button>
+                    <button type="button" class="btn btn-secondary" @click="currentSection = 'upload'">Back</button>
+                    <button type="button" class="btn btn-primary" @click="startConversion()" :disabled="!isFormValid">Convert to EXE</button>
                 </div>
             </section>
 
             <!-- Progress Section -->
-            <section class="progress-section" id="progressSection" style="display: none;">
+            <section class="progress-section" x-show="currentSection === 'progress'">
                 <div class="section-header">
                     <h3>Converting</h3>
                     <p>Building your Windows executable</p>
                 </div>
                 <div class="progress-container">
                     <div class="progress-bar">
-                        <div class="progress-fill" id="progressFill"></div>
+                        <div class="progress-fill" :style="`width: ${progress.percentage}%`" :class="{ 'loading-animation': progress.animate }"></div>
                     </div>
-                    <div class="progress-text" id="progressText">Uploading file...</div>
+                    <div class="progress-text" x-text="progress.text">Uploading file...</div>
                 </div>
                 <div class="progress-steps">
-                    <div class="step active" id="step1">
-                        <div class="step-number">1</div>
-                        <div class="step-label">Upload</div>
-                    </div>
-                    <div class="step" id="step2">
-                        <div class="step-number">2</div>
-                        <div class="step-label">Building</div>
-                    </div>
-                    <div class="step" id="step3">
-                        <div class="step-number">3</div>
-                        <div class="step-label">Complete</div>
-                    </div>
-                    <div class="step" id="step4" style="display: none;">
-                        <div class="step-number">4</div>
-                        <div class="step-label">Complete</div>
-                    </div>
+                    <template x-for="(step, index) in progressSteps" :key="index">
+                        <div class="step" 
+                             :class="{ 
+                                'active': progress.step === index + 1, 
+                                'completed': progress.step > index + 1 
+                             }">
+                            <div class="step-number" x-text="index + 1"></div>
+                            <div class="step-label" x-text="step"></div>
+                        </div>
+                    </template>
                 </div>
             </section>
 
             <!-- Result Section -->
-            <section class="result-section" id="resultSection" style="display: none;">
-                <div class="result-success" id="resultSuccess" style="display: none;">
+            <section class="result-section" x-show="currentSection === 'result'">
+                <div class="result-success" x-show="result.success">
                     <div class="success-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
@@ -179,12 +179,13 @@
                     </div>
                     <h3>Success</h3>
                     <p>Your executable is ready for download</p>
+                    <br/>
                     <div class="download-info">
-                        <div class="file-info" id="fileInfo">
-                            <span class="file-name" id="fileName">app.exe</span>
-                            <span class="file-size" id="fileSize">~50MB</span>
+                        <div class="file-info">
+                            <span class="file-name" x-text="result.fileName">app.exe</span>
+                            <span class="file-size" x-text="result.fileSize">~50MB</span>
                         </div>
-                        <button type="button" class="btn btn-primary btn-download" id="downloadBtn">
+                        <button type="button" class="btn btn-primary btn-download" @click="downloadFile()">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                 <polyline points="7,10 12,15 17,10"/>
@@ -195,7 +196,7 @@
                     </div>
                 </div>
 
-                <div class="result-error" id="resultError" style="display: none;">
+                <div class="result-error" x-show="result.error">
                     <div class="error-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <circle cx="12" cy="12" r="10"/>
@@ -204,17 +205,17 @@
                         </svg>
                     </div>
                     <h3>Failed</h3>
-                    <p id="errorMessage">Conversion could not be completed</p>
-                    <div class="error-details" id="errorDetails" style="display: none;">
+                    <p x-text="result.errorMessage">Conversion could not be completed</p>
+                    <div class="error-details" x-show="result.errorDetails">
                         <details>
                             <summary>Error Details</summary>
-                            <pre id="errorDetailText"></pre>
+                            <pre x-text="result.errorDetails"></pre>
                         </details>
                     </div>
                 </div>
 
                 <div class="action-buttons">
-                    <button type="button" class="btn btn-secondary" id="resetBtn">Convert Another File</button>
+                    <button type="button" class="btn btn-secondary" @click="reset()">Convert Another File</button>
                 </div>
             </section>
         </main>
@@ -230,11 +231,8 @@
         </footer>
     </div>
 
-    <!-- Loading Overlay -->
-    <div class="loading-overlay" id="loadingOverlay" style="display: none;">
-        <div class="loading-spinner"></div>
-    </div>
 
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
