--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>">
 </head>
 <body>
-    <div class="container" x-data="html2exeApp()">
+    <div class="container" x-data="html2exeApp()" x-cloak>
         <header class="header">
             <div class="header-content">
                 <div class="logo">
